# codepunk

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  master.yml
example/: test.cpp  test.ll  test2.cpp  test2.ll
googletest/: CMakeLists.txt.in
include/: BoolExpr.h  Interval.h  IntervalAnalysis.h  IntervalSolver.h  IntervalSymbols.h  Ternary.h
src/: Main.cpp  main.cpp
test/: IntervalSolverTest.cpp  IntervalTest.cpp  TernaryTest.cpp
